cluster/kubernetes/apps/external/konflate/ingress/konflate-http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: konflate
  namespace: external
  annotations:
    gatus.home-operations.com/enabled: 'true'
    gatus.home-operations.com/endpoint: |
      name: konflate
spec:
  hostnames:
    - konflate.cjsolsen.com
  parentRefs:
    - name: external-gateway
      namespace: network
      sectionName: konfalte-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: konflate
          port: 8080
